<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".About">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_us"
                android:textColor="#2a2a2a"
                android:textSize="25sp"
                android:textStyle="bold"
                card_view:fontFamily="sans-serif" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                card_view:cardBackgroundColor="#2a2a2a"
                card_view:cardElevation="20dp"
                card_view:contentPadding="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/image"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:layout_centerHorizontal="true"
                        android:src="@mipmap/chinnu"
                        app:civ_border_color="#FFFFFF"
                        app:civ_border_width="2dp" />


                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/image"
                        android:layout_centerHorizontal="true"
                        android:linksClickable="true"
                        android:text="@string/shiva_shashank"
                        android:textColor="#ffffff"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/name"
                        android:layout_centerHorizontal="true"
                        android:text="@string/android_developer"
                        android:textColor="#ffffff"
                        android:textSize="12sp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardBackgroundColor="#2a2a2a"
                card_view:cardElevation="20dp"
                android:layout_margin="10dp"
                card_view:contentPadding="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/image2"
                        android:layout_width="95dp"
                        android:layout_height="94dp"
                        android:layout_centerHorizontal="true"
                        android:src="@mipmap/chintu"
                        app:civ_border_color="#FFFFFF"
                        app:civ_border_width="2dp" />

                    <TextView
                        android:id="@+id/name2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/image2"
                        android:layout_centerHorizontal="true"
                        android:linksClickable="true"
                        android:text="@string/sri_charan"
                        android:textColor="#ffffff"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/name2"
                        android:layout_centerHorizontal="true"
                        android:text="@string/android_developer"
                        android:textColor="#ffffff"
                        android:textSize="12sp" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/card_view3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardBackgroundColor="#2a2a2a"
                card_view:cardElevation="20dp"
                android:layout_margin="10dp"
                card_view:contentPadding="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:id="@+id/image3"
                        android:src="@mipmap/tinku"
                        android:layout_centerHorizontal="true"
                        app:civ_border_width="2dp"
                        app:civ_border_color="#FFFFFF"/>


                    <TextView
                        android:id="@+id/name3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/image3"
                        android:layout_centerHorizontal="true"
                        android:linksClickable="true"
                        android:text="@string/vamshi_raghav"
                        android:textColor="#ffffff"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/name3"
                        android:layout_centerHorizontal="true"
                        android:text="@string/full_stack_developer"
                        android:textColor="#ffffff"
                        android:textSize="12sp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>